# token2022-wrapper

./: Cargo.toml  README.md  build.sh  test.sh
sdk/: mainnet_wrapper_mints.json  package.json  tsconfig.json
sdk/psm-src/instructions/: InitializeWrapperToken.ts
sdk/scripts/: initializeWrapperToken.ts
sdk/src/: index.ts
sdk/src/constants/: addresses.ts  index.ts  seeds.ts
sdk/src/errors/: index.ts
sdk/src/idl/: token2022_wrapper.json
sdk/src/instructions/: DepositAndMintWrapperTokens.ts  InitializeWrapperToken.ts  WithdrawAndBurnWrapperTokens.ts  index.ts
sdk/src/types/: TokenWrapperInstruction.ts  index.ts  layout.ts
sdk/src/utils/: index.ts  pda.ts  solana.ts
sdk/tests/: test.ts
sdk/tests/utils/: helpers.ts  index.ts  token2022utils.ts  tokenUtils.ts
shank-solita-scripts/: generateIdl.js  package.json
src/: error.rs  instruction.rs  lib.rs  processor.rs
src/instruction_builders/: mod.rs  token2022_wrapper.rs
src/utils/: assertion.rs  mod.rs  pda.rs  system_utils.rs
tests/: helpers.rs  mod.rs  test_token2022_wrapper.rs
tests/utils/: helpers.rs  mod.rs  token_2022_utils.rs  token_utils.rs  transfer_fee.rs  types.rs
