[package]
name = "token2022-wrapper"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "token2022_wrapper"

[features]
no-entrypoint = []

[profile.release]
lto = "fat"
codegen-units = 1
overflow-checks = true

[dependencies]
shank = "=0.4.2"
solana-program = "2.0.1"
spl-token = { version = "6.0.0", features = ["no-entrypoint"]}
spl-token-2022 = { version = "4.0.0", features = ["no-entrypoint"]}
num_enum = "=0.5.9"
spl-associated-token-account = { version = "4.0.0", features = ["no-entrypoint"]}
itertools = "0.13.0"
thiserror = "1.0"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
solana-sdk = "2.0.1"
anyhow = "1.0.86"
solana-program-test = "2.0.1"
solana-client = "2.0.1"
spl-token-client = "0.11.0"